compiler/testData/diagnostics/tests/regressions/ScopeForSecondaryConstructors.jet
class Foo(var bar : Int, var barr : Int, var barrr : Int) {
    {
      bar = 1
      barr = 1
      barrr = 1
      1 : Int
      this : Foo
    }

    this(var bar : Int) : this(1, 1, 1) {
      bar = <!UNUSED_VALUE!>1<!>
      this.bar
      1 : Int
      val <!UNUSED_VARIABLE!>a<!> : Int =1
      this : Foo
    }
  }